# csci_630

./: .gitignore  CHANGELOG.md  requirement.txt
data/media/.minio.sys/: format.json
src/backend/: pyproject.toml
src/backend/core/: factories.py  models.py
src/backend/core/api/: viewsets.py
src/backend/core/services/: participants_management.py
src/backend/core/templates/mail/html/: invitation.html  screen_recording.html  transcript.html
src/backend/core/templates/mail/text/: invitation.txt  screen_recording.txt  transcript.txt
src/backend/core/tests/: test_api_users_me.py  test_db_migrations.py
src/backend/core/tests/rooms/: test_api_rooms_participants_management.py  test_api_rooms_update.py  test_api_rooms_waiting_room_participant_flow.py
src/backend/core/tests/swagger/: swagger.json
src/backend/meet/: settings.py
src/frontend/: package-lock.json  package.json  playwright.config.ts
src/frontend/src/i18n/: i18n.ts  init.test.ts
src/frontend/src/primitives/: VerticallyOffCenter.tsx
src/frontend/tests-e2e/: language-switch.spec.ts
