#
# Meet package
#
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meet"
version = "1.5.0"
authors = [{ "name" = "DINUM", "email" = "dev@mail.numerique.gouv.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
description = "A simple video and phone conferencing tool, powered by LiveKit"
keywords = ["Django", "Contacts", "Templates", "RBAC"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.40.69",
    "Brotli==1.2.0",
    "brevo-python==1.2.0",
    "celery[redis]==5.5.3",
    "django-configurations==2.5.1",
    "django-cors-headers==4.9.0",
    "django-countries==8.0.0",
    "django-lasuite[all]==0.0.19",
    "django-parler==2.3",
    "redis==5.2.1",
    "django-redis==6.0.0",
    "django-storages[s3]==1.14.6",
    "django-timezone-field>=5.1",
    "django==5.2.9",
    "djangorestframework==3.16.1",
    "drf_spectacular==0.29.0",
    "dockerflow==2024.4.2",
    "easy_thumbnails==2.10.1",
    "factory_boy==3.3.3",
    "gunicorn==23.0.0",
    "jsonschema==4.25.1",
    "markdown==3.10",
    "nested-multipart-parser==1.6.0",
    "psycopg[binary]==3.2.12",
    "PyJWT==2.10.1",
    "pyOpenSSL==25.3.0",
    "python-frontmatter==1.1.0",
    "requests==2.32.5",
    "sentry-sdk==2.43.0",
    "whitenoise==6.11.0",
    "mozilla-django-oidc==4.0.1",
    "livekit-api==1.0.7",
    "aiohttp==3.13.3",
]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov-report",
    "term-missing",
    "--import-mode=importlib",
]
python_files = [
    "test_*.py",
    "tests.py",
]

DJANGO_SETTINGS_MODULE = "meet.settings"
DJANGO_CONFIGURATION = "Test"

filterwarnings = [
  "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated:django.utils.deprecation.RemovedInDjango60Warning",
  "error::DeprecationWarning",
  "error::django.utils.deprecation.RemovedInDjango60Warning",
  "error::django.core.paginator.UnorderedObjectListWarning",
]
